fortify routes updated
